style.css
body {
    transform: scale(1);
    transform-origin: top center;
    background-color: #444444;
    color: white;
    font-family: Arial, sans-serif;
    text-align: center;
}

button {
    background-color: #333333;
    color: #ffffff;
    width: 200px;
    height: 55px;
    font-size: 20px;
    font-family: Arial, sans-serif;
    border: 1px solid #cccccc;
    margin-left: 10px;
}

button:hover {
    background-color: #FFA54F;
    color: #333333;
}

input {
    width: 200px;
    height: 40px;
    font-size: 20px;
    background-color: lightgray;
    border: 1px solid gray;
    margin-left: 10px;
}

input:hover {
    background-color: #FFE4C4;
    color: #333333;
}

select {
    width: 200px;
    height: 50px;
    font-size: 16px;
    background-color: lightgray;
    color: #333333;
    border: 1px solid gray;
    padding: 5px;
    margin-left: 10px;
}

select:hover {
    background-color: #FFE4C4;
    color: #333333;
}

span {
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
    font-size: 20px;
    padding: 5px;
    margin: 10px;
}

h1 {
    color: #FFA54F;
}

.hidden {
    display: none;
}

.input-container {
    display: flex;
    justify-content: center; /* Horizontale Ausrichtung in der Mitte */
    align-items: center; /* Vertikale Ausrichtung in der Mitte */
    padding: 10px;
}

.input-container input {
    padding: 5px;
    width: 200px;
}

.input-container button {
    padding: 5px 10px;
}

#game-screen input,
#game-screen button {
    margin-top: 10px;
}

#answer button {
    margin-top: 20px;
}

#player1Input {
    font-size: 34px;
}
#player2Input {
    font-size: 34px;
}
#player1PointsLabel{
    font-size: 30px;
    color: #FFE4C4;
    margin-left: 10px;
}
#player2PointsLabel{
    font-size: 30px;
    color: #FFE4C4;
    margin-left: 10px;
}
#question-text {
    color: #FFE4C4;
}

